--- a/css/main.css
+++ b/css/main.css
@@ -513,4 +513,80 @@ h1, h2, h3, h4, h5, h6, p {
   display: inline-block;
   border-radius: 6px;
 }
+
+.collection__container {
+  padding-right: 84.5px;
+  padding-left: 84.5px;
+  margin-bottom: 200px;
+}
+
+.collection__inner-wrapper {
+  padding-top: 130px;
+}
+
+.collection__list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.collection__item {
+  padding-top: 260px;
+  max-width: 255px;
+  margin-right: 30px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  text-align: center;
+  position: relative;
+}
+
+.collection__item:last-child {
+  margin-right: 0px;
+}
+
+.collection__heading-gran {
+  font-family: 'Fraunces 9pt';
+  font-style: normal;
+  font-weight: 900;
+  font-size: 24px;
+  line-height: 32px;
+  color: #333D4B;
+  margin-bottom: 24px;
+}
+
+.collection__heading-gran::before {
+  content: "";
+  display: inline-block;
+  background-image: url(./../../images/espresso.png);
+  background-size: cover;
+  width: 256px;
+  height: 193px;
+  top: 0;
+  background-position-x: -40px;
+  position: absolute;
+}
+
+.collection__description {
+  font-family: 'Barlow';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 26px;
+  text-align: center;
+  color: #333D4B;
+}
 /*# sourceMappingURL=main.css.map */
