--- a/css/main.css
+++ b/css/main.css
@@ -522,6 +522,10 @@ h1, h2, h3, h4, h5, h6, p {
 
 .collection__inner-wrapper {
   padding-top: 130px;
+  background-image: url(./../../images/background-text.svg);
+  background-size: 1111px 196px contain;
+  background-repeat: no-repeat;
+  background-position: calc(0%) calc(1%);
 }
 
 .collection__list {
@@ -588,5 +592,192 @@ h1, h2, h3, h4, h5, h6, p {
   line-height: 26px;
   text-align: center;
   color: #333D4B;
+}
+
+.choose__inner-wrapper {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  background-color: #2C343E;
+  border-radius: 10px;
+  width: 1280px;
+  height: 577px;
+  position: relative;
+  margin-bottom: 351px;
+}
+
+.choose__top {
+  padding: 100px 370px 317px 370px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  text-align: center;
+  position: relative;
+}
+
+.choose__top-heading {
+  width: 329px;
+  font-family: 'Fraunces';
+  font-style: normal;
+  font-weight: 900;
+  font-size: 40px;
+  line-height: 48px;
+  color: #FEFCF7;
+  margin-bottom: 32px;
+}
+
+.choose__top-text {
+  font-size: 16px;
+  line-height: 26px;
+  color: #FEFCF7;
+  mix-blend-mode: normal;
+  opacity: 0.8;
+  width: 540px;
+}
+
+.choose__bottom {
+  display: inline-block;
+  position: absolute;
+  top: calc(100% - 231px);
+  margin-right: 85px;
+  margin-left: 85px;
+}
+
+.choose__list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  max-width: 1111px;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.choose__bottom-item {
+  width: 350px;
+  background-color: #0E8784;
+  border-radius: 8px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  text-align: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin-right: 30px;
+}
+
+.choose__bottom-item:last-child {
+  margin-right: 0px;
+}
+
+.choose__item-heading-1 {
+  padding-top: 124px;
+  width: 255px;
+  font-family: 'Fraunces';
+  font-style: normal;
+  position: relative;
+  font-weight: 900;
+  font-size: 24px;
+  line-height: 32px;
+  color: #FEFCF7;
+  margin-top: 76px;
+  margin-bottom: 24px;
+}
+
+.choose__item-heading-1::before {
+  content: "";
+  display: inline-block;
+  background-image: url(./../../images/bg1.svg);
+  width: 72px;
+  height: 72px;
+  background-size: contain;
+  position: absolute;
+  top: 0;
+  left: 89px;
+  background-repeat: no-repeat;
+}
+
+.choose__item-heading-2 {
+  padding-top: 124px;
+  width: 255px;
+  font-family: 'Fraunces';
+  font-style: normal;
+  position: relative;
+  font-weight: 900;
+  font-size: 24px;
+  line-height: 32px;
+  color: #FEFCF7;
+  margin-top: 76px;
+  margin-bottom: 24px;
+}
+
+.choose__item-heading-2::before {
+  content: "";
+  display: inline-block;
+  background-image: url(./../../images/bg2.svg);
+  width: 72px;
+  height: 72px;
+  background-size: contain;
+  position: absolute;
+  top: 0;
+  left: 89px;
+  background-repeat: no-repeat;
+}
+
+.choose__item-heading-3 {
+  padding-top: 124px;
+  width: 255px;
+  font-family: 'Fraunces';
+  font-style: normal;
+  position: relative;
+  font-weight: 900;
+  font-size: 24px;
+  line-height: 32px;
+  color: #FEFCF7;
+  margin-top: 76px;
+  margin-bottom: 24px;
+}
+
+.choose__item-heading-3::before {
+  content: "";
+  display: inline-block;
+  background-image: url(./../../images/bg3.svg);
+  width: 72px;
+  height: 72px;
+  background-size: contain;
+  position: absolute;
+  top: 0;
+  left: 89px;
+  background-repeat: no-repeat;
+}
+
+.choose__item-text {
+  font-size: 16px;
+  line-height: 26px;
+  color: #FEFCF7;
+  width: 255px;
+  padding-bottom: 48px;
 }
 /*# sourceMappingURL=main.css.map */
