--- a/scss/blocks/_blocks.scss
+++ b/scss/blocks/_blocks.scss
@@ -5,4 +5,7 @@
 @import "collection";
 @import "choose";
 @import "works";
+@import "about";
+@import "commitment";
+@import "quality";
 @import "footer";
