--- a/css/main.css
+++ b/css/main.css
@@ -900,6 +900,130 @@ h1, h2, h3, h4, h5, h6, p {
   background-color: #E2DEDB;
 }
 
+.about__container {
+  background-image: url(./../../images/about-bg.jpg);
+  background-size: cover;
+  width: 1280px;
+  height: 450px;
+  border-radius: 10px;
+  margin-bottom: 168px;
+}
+
+.about__inner-wrapper {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  max-width: 445px;
+  text-align: left;
+  padding: 137px 0 137px 85px;
+}
+
+.about__heading {
+  font-family: 'Fraunces';
+  font-style: normal;
+  font-weight: 900;
+  font-size: 40px;
+  line-height: 48px;
+  color: #FEFCF7;
+  margin-bottom: 24px;
+}
+
+.about__text {
+  font-family: 'Barlow';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 26px;
+  color: #FEFCF7;
+}
+
+.commitment__container {
+  padding-left: 85px;
+  padding-right: 85px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  margin-bottom: 168px;
+}
+
+.commitment__left {
+  margin-right: 125px;
+}
+
+.commitment__left-img {
+  width: 445px;
+  height: 520px;
+  -o-object-fit: cover;
+     object-fit: cover;
+  border-radius: 8px;
+}
+
+.commitment__right {
+  max-width: 540px;
+  padding-top: 90px;
+}
+
+.commitment__right-heading {
+  font-family: 'Fraunces';
+  font-style: normal;
+  font-weight: 900;
+  font-size: 40px;
+  line-height: 48px;
+  color: #333D4B;
+  margin-bottom: 32px;
+}
+
+.commitment__right-text {
+  font-size: 16px;
+  line-height: 26px;
+  color: #333D4B;
+  mix-blend-mode: normal;
+  opacity: 0.8;
+}
+
+.quality__inner-wrapper {
+  background-color: #2C343E;
+  border-radius: 10px;
+  padding: 88px 0 176px 85px;
+  position: relative;
+  margin-bottom: 168px;
+}
+
+.quality__heading {
+  width: 540px;
+  font-family: 'Fraunces';
+  font-style: normal;
+  font-weight: 900;
+  font-size: 40px;
+  line-height: 48px;
+  color: #FEFCF7;
+  margin-bottom: 32px;
+}
+
+.quality__text {
+  width: 540px;
+  font-size: 16px;
+  line-height: 26px;
+  color: #FEFCF7;
+  mix-blend-mode: normal;
+  opacity: 0.8;
+}
+
+.quality-background {
+  background-image: url(./../images/quality-bg.png);
+  background-repeat: no-repeat;
+  position: absolute;
+  background-size: 445px 474px;
+  width: 445px;
+  height: 474px;
+  top: -85px;
+  right: 85px;
+}
+
 .footer__container {
   background-color: #2C343E;
 }
