--- a/scss/blocks/_headquarters.scss
+++ b/scss/blocks/_headquarters.scss
@@ -41,6 +41,7 @@
         content: "";
         display: inline-block;
         background-image: url(./../../images/uk.svg);
+        background-repeat: no-repeat;
         width: 41px;
         height: 49px;
         background-size: contain;
@@ -74,6 +75,7 @@
         content: "";
         display: inline-block;
         background-image: url(./../../images/canada.svg);
+        background-repeat: no-repeat;
         width: 41px;
         height: 49px;
         background-size: contain;
@@ -96,6 +98,7 @@
         content: "";
         display: inline-block;
         background-image: url(./../../images/australia.svg);
+        background-repeat: no-repeat;
         width: 41px;
         height: 49px;
         background-size: contain;
