--- a/css/main.css
+++ b/css/main.css
@@ -522,6 +522,12 @@ h1, h2, h3, h4, h5, h6, p {
   background-color: #E2DEDB;
 }
 
+@media only screen and (-webkit-min-device-pixel-ratio: 2), only screen and (min--moz-device-pixel-ratio: 2), only screen and (min-device-pixel-ratio: 2), only screen and (min-resolution: 192dpi), only screen and (min-resolution: 2dppx) {
+  .cbanner__inner-wrapper {
+    background-image: url(./../../images/Bitmap@2.jpg);
+  }
+}
+
 .collection__container {
   padding-right: 84.5px;
   padding-left: 84.5px;
@@ -600,6 +606,12 @@ h1, h2, h3, h4, h5, h6, p {
   line-height: 26px;
   text-align: center;
   color: #333D4B;
+}
+
+@media only screen and (-webkit-min-device-pixel-ratio: 2), only screen and (min--moz-device-pixel-ratio: 2), only screen and (min-device-pixel-ratio: 2), only screen and (min-resolution: 192dpi), only screen and (min-resolution: 2dppx) {
+  .collection__heading-gran::before {
+    background-image: url(./../../images/espresso.png);
+  }
 }
 
 .choose__inner-wrapper {
@@ -941,6 +953,12 @@ h1, h2, h3, h4, h5, h6, p {
   color: #FEFCF7;
 }
 
+@media only screen and (-webkit-min-device-pixel-ratio: 2), only screen and (min--moz-device-pixel-ratio: 2), only screen and (min-device-pixel-ratio: 2), only screen and (min-resolution: 192dpi), only screen and (min-resolution: 2dppx) {
+  .about__container {
+    background-image: url(./../../images/about-bg.png);
+  }
+}
+
 .commitment__container {
   padding-left: 85px;
   padding-right: 85px;
@@ -1014,7 +1032,7 @@ h1, h2, h3, h4, h5, h6, p {
 }
 
 .quality-background {
-  background-image: url(./../images/quality-bg.png);
+  background-image: url(./../../images/quality-bg.png);
   background-repeat: no-repeat;
   position: absolute;
   background-size: 445px 474px;
@@ -1022,6 +1040,12 @@ h1, h2, h3, h4, h5, h6, p {
   height: 474px;
   top: -85px;
   right: 85px;
+}
+
+@media only screen and (-webkit-min-device-pixel-ratio: 2), only screen and (min--moz-device-pixel-ratio: 2), only screen and (min-device-pixel-ratio: 2), only screen and (min-resolution: 192dpi), only screen and (min-resolution: 2dppx) {
+  .quality-background {
+    background-image: url(./../../images/quality@2x.png);
+  }
 }
 
 .headquarters__container {
