--- a/scss/blocks/_cbanner.scss
+++ b/scss/blocks/_cbanner.scss
@@ -57,4 +57,15 @@
     &__button:active {
         background-color: $button-active;
     }
+
+    @media
+    only screen and (-webkit-min-device-pixel-ratio: 2),
+    only screen and (   min--moz-device-pixel-ratio: 2),
+    only screen and (     -o-min-device-pixel-ratio: 2/1),
+    only screen and (        min-device-pixel-ratio: 2),
+    only screen and (                min-resolution: 192dpi),
+    only screen and (                min-resolution: 2dppx) { 
+      
+        &__inner-wrapper        { background-image: url(./../../images/Bitmap@2.jpg);} 
+    }
 }
