--- a/scss/blocks/_collection.scss
+++ b/scss/blocks/_collection.scss
@@ -1,11 +1,11 @@
 .collection {
-
+    
     &__container {
         padding-right: 84.5px;
         padding-left: 84.5px;
         margin-bottom: 200px;
     }
-
+    
     &__inner-wrapper {
         padding-top: 130px;
         background-image: url(./../../images/background-text.svg);
@@ -13,12 +13,12 @@
         background-repeat: no-repeat;
         background-position: calc(0%) calc(1%);
     }
-
+    
     &__list {
         display: flex;
         align-items: center;
     }
-
+    
     &__item {
         padding-top: 260px;
         max-width: 255px;
@@ -30,11 +30,11 @@
         text-align: center;
         position: relative;
     }
-
+    
     &__item:last-child {
         margin-right: 0px;
     }
-
+    
     &__heading-gran {
         font-family: 'Fraunces 9pt';
         font-style: normal;
@@ -44,7 +44,7 @@
         color: #333D4B;
         margin-bottom: 24px;
     }
-
+    
     &__heading-gran::before {
         content: "";
         display: inline-block;
@@ -56,7 +56,7 @@
         background-position-x: -40px;
         position: absolute;
     }
-
+    
     &__description {
         font-family: 'Barlow';
         font-style: normal;
@@ -66,4 +66,15 @@
         text-align: center;
         color: #333D4B;
     }
+    
+    @media
+    only screen and (-webkit-min-device-pixel-ratio: 2),
+    only screen and (   min--moz-device-pixel-ratio: 2),
+    only screen and (     -o-min-device-pixel-ratio: 2/1),
+    only screen and (        min-device-pixel-ratio: 2),
+    only screen and (                min-resolution: 192dpi),
+    only screen and (                min-resolution: 2dppx) { 
+        
+        &__heading-gran::before { background-image: url(./../../images/espresso.png);}
+    } 
 }
