--- a/css/main.css
+++ b/css/main.css
@@ -1156,6 +1156,39 @@ h1, h2, h3, h4, h5, h6, p {
   top: 0;
 }
 
+.create__container {
+  background-image: url(./../../images/create.png);
+  width: 1280px;
+  height: 450px;
+  background-size: cover;
+  border-radius: 10px;
+  margin-bottom: 177px;
+}
+
+.create__inner-wrapper {
+  padding: 134px 0 134px 85px;
+}
+
+.create__heading {
+  font-family: 'Fraunces';
+  font-style: normal;
+  font-weight: 900;
+  font-size: 72px;
+  line-height: 72px;
+  color: #FEFCF7;
+  margin-bottom: 32px;
+  width: 485px;
+}
+
+.create__text {
+  font-size: 16px;
+  line-height: 26px;
+  color: #FEFCF7;
+  mix-blend-mode: normal;
+  opacity: 0.8;
+  width: 445px;
+}
+
 .footer__container {
   background-color: #2C343E;
 }
