added hover effect

--- a/css/main.css
+++ b/css/main.css
@@ -1275,6 +1275,236 @@ h1, h2, h3, h4, h5, h6, p {
   color: #FEFCF7;
 }
 
+.drink__container {
+  padding-left: 85px;
+  padding-right: 85px;
+}
+
+.drink__inner-container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.drink__container-left {
+  max-width: 255px;
+  margin-right: 125px;
+}
+
+.drink__list-left {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  position: -webkit-sticky;
+  position: sticky;
+  top: 20px;
+}
+
+.drink__item-left {
+  padding-bottom: 24px;
+  margin-bottom: 24px;
+  border-bottom: 1px solid #83888F;
+  opacity: 0.4;
+}
+
+.drink__item-left:last-child {
+  border-bottom: none;
+}
+
+.drink__link-left {
+  text-decoration: none;
+  font-family: 'Fraunces';
+  font-style: normal;
+  font-weight: 900;
+  font-size: 24px;
+  line-height: 32px;
+  color: #333D4B;
+}
+
+.drink__item-number {
+  font-family: 'Fraunces';
+  font-style: normal;
+  font-weight: 900;
+  font-size: 24px;
+  line-height: 32px;
+  color: #83888F;
+  margin-right: 24.5px;
+}
+
+.drink__number--active {
+  font-family: 'Fraunces';
+  font-style: normal;
+  font-weight: 900;
+  font-size: 24px;
+  line-height: 32px;
+  color: #0E8784;
+}
+
+.drink__item--active {
+  opacity: 1;
+}
+
+.drink__container-right {
+  max-width: 730px;
+}
+
+.drink__container-heading {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  margin-bottom: 56px;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  max-width: 710px;
+}
+
+.drink__heading-right {
+  font-family: 'Fraunces';
+  font-style: normal;
+  font-weight: 900;
+  font-size: 40px;
+  line-height: 48px;
+  color: #83888F;
+}
+
+.drink__input-container {
+  max-width: 730px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.drink .drink__input {
+  opacity: 0;
+  z-index: -1;
+}
+
+.drink .drink__input:checked + .drink__input-text {
+  color: #FFFFFF;
+}
+
+.drink .drink__input:checked + .drink__input-heading {
+  color: #FFFFFF;
+}
+
+.drink__input-label:hover {
+  background-color: #0E8784;
+}
+
+.drink__input-label {
+  display: inline-block;
+  width: 228px;
+  background: #F4F1EB;
+  border-radius: 8px;
+  margin-bottom: 88px;
+  padding-top: 32px;
+  padding-right: 28px;
+  padding-bottom: 84px;
+  padding-left: 28px;
+  margin-right: 23px;
+  -webkit-transition: all 1s;
+  transition: all 1s;
+}
+
+.drink__input-heading {
+  font-family: 'Fraunces';
+  font-style: normal;
+  font-weight: 900;
+  font-size: 24px;
+  line-height: 32px;
+  color: #333D4B;
+  margin-bottom: 24px;
+  width: 180px;
+}
+
+.drink__input-text {
+  font-size: 16px;
+  line-height: 26px;
+  color: #333D4B;
+}
+
+.summary__container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: end;
+      -ms-flex-align: end;
+          align-items: end;
+  max-width: 1000px;
+}
+
+.summary__inner-wrapper {
+  width: 730px;
+  background-color: #2C343E;
+  padding: 24px 50px  30px 78px;
+  margin-bottom: 40px;
+}
+
+.summary__heading {
+  font-family: 'Barlow';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 26px;
+  text-transform: uppercase;
+  color: #FFFFFF;
+  mix-blend-mode: normal;
+  opacity: 0.5;
+  margin-bottom: 8px;
+}
+
+.summary__text {
+  font-family: 'Fraunces';
+  font-style: normal;
+  font-weight: 900;
+  font-size: 24px;
+  line-height: 40px;
+  color: #FFFFFF;
+}
+
+.summary__color {
+  color: #0E8784;
+}
+
+.summary__button {
+  padding: 16px 31.5px;
+  font-family: 'Fraunces';
+  font-style: normal;
+  font-weight: 900;
+  font-size: 18px;
+  line-height: 25px;
+  text-align: center;
+  color: #FEFCF7;
+  background-color: #0E8784;
+  border-radius: 6px;
+  border: none;
+  margin-bottom: 168px;
+  cursor: pointer;
+}
+
+.summary__button:hover {
+  background-color: #66D2CF;
+}
+
+.summary__button:active {
+  background-color: #E2DEDB;
+}
+
 .footer__container {
   background-color: #2C343E;
   max-width: 1280px;
@@ -1317,7 +1547,7 @@ h1, h2, h3, h4, h5, h6, p {
 }
 
 .footer__icon-wrapper {
-  margin-left: 295px;
+  margin-left: 255px;
 }
 
 .footer__icon-link {
